2004-01-10  Bastien Nocera  <hadess@hadess.net>

	* configure.in:
	* src/Makefile.am: explicitely link against libX11 to avoid problems
	with crappy linkers (like the Solaris one) (Closes: #130894)

2004-01-10  Bastien Nocera  <hadess@hadess.net>

	* README: upd
	* src/bacon-video-widget-xine.c: (bacon_video_widget_idle_signal):
	the automatic resize on new stream should be of 1:1, apparently, any
	other size confuses users (Closes: #131026)

2004-01-09  Julien MOUTTE  <julien@moutte.net>

	* src/bacon-video-widget-gst.c: (bacon_video_widget_instance_init),
	(bacon_video_widget_signal_idler), (got_found_tag),
	(got_video_size), (got_stream_length), (got_time_tick),
	(got_error), (bacon_video_widget_finalize),
	(bacon_video_widget_set_property),
	(bacon_video_widget_get_property): Implementing an AsyncQueue for
	GStreamer signals. That fixes the resizing/fullscreen.
	* src/gstvideowidget.c: (gst_video_widget_reorder_windows),
	(gst_video_widget_realize), (gst_video_widget_expose),
	(gst_video_widget_allocate), (gst_video_widget_class_init),
	(gst_video_widget_set_source_size),
	(gst_video_widget_get_source_size), (gst_video_widget_get_logo):
	* src/gstvideowidget.h: Synchronizing with latest video widget from 
	gst-player, some bug fixes and warnings removal.

2004-01-09  Jon Trowbridge <trow@ximian.com>

	* src/bacon-video-widget-gst.c (bacon_video_widget_finalize):
	Since the GstVideoWidget stored in bvw->priv->vw has been packed
	into the BaconVideoWidget bvw, it doesn't need to be destroyed.
	(This fixes a segfault on BaconVideoWidget finalization.)

2004-01-08  Bastien Nocera  <hadess@hadess.net>

	* NEWS: updated
	* configure.in: removed checks for the Sun keysym headers
	* data/Makefile.am:
	* src/Makefile.am: more work on making vanity optional, fix build
	(working around an automake dependency calculation bug)
	* src/totem.c: (totem_action_handle_key): don't use the XFree86
	multimedia keysyms if we're not building against XFree86