@@ -1,3 +1,10 @@
+2004-01-10  Julien MOUTTE  <julien@moutte.net>
+
+	* src/bacon-video-widget-gst.c: (bacon_video_widget_open),
+	(bacon_video_widget_can_play), (bacon_video_widget_get_mrls): Adding
+	DVD playback in GStreamer bacon video widget. Fixes now need to be done
+	in GStreamer for that work correctly.
+
 2004-01-10  Bastien Nocera  <hadess@hadess.net>
 
 	* configure.in:
